# mathsolverbackend

./: README.md  app.py  cardano_method.py  math_operations.py  matrix_operations.py  package-lock.json  pyproject.toml  requirements.txt  test_solvers.py
