[tool.poetry]
name = "mathsolverbackend"
version = "0.1.0"
description = "Math Solver Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
# Add your project dependencies here, for example:
# flask = "^2.0.1"

[tool.poetry.dev-dependencies]
# Add your development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"