[tool.poetry]
name = "mathsolverbackend"
version = "0.1.0"
description = "Math Solver Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.1"
# Add other dependencies your project needs, for example:
 numpy = "^1.21.0"
# pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
# Add your development dependencies here if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"