[tool.poetry]
name = "mathsolverbackend"
version = "0.1.0"
description = "Math Solver Backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0.1"
gunicorn = "^20.1.0"
numpy = "^1.21.0"
flask-cors = "^3.0.10"
# Add any other dependencies your project needs, for example:
# pandas = "^1.3.0"
# scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
# Add your development dependencies here if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
requires-python = ">=3.11.9"
